Fri Jun 11 10:53:49 2004  Gilles Detillieux  <grdetil at scrc.umanitoba.ca>

    * installdir/HtFileType: Added -f to rm command.

    * htsearch/parser.cc (perform_or): Added missing & in if clause.

    * contrib/htdig-3.2.0.spec: Updated for 3.2.0b6.

    * installdir/Makefile.{am,in}: Don't stick $(DESTDIR) in HtFileType.

Thu Jun 10 16:49:52 CEST 2004 Gabriele Bartolini <angusgb at users.sourceforge.net>

   * Tagged release htdig-3-2-0b6

Thu Jun 10 16:39:36 CEST 2004 Gabriele Bartolini <angusgb at users.sourceforge.net>

    * htcommon/conf_(lexer.lxx,parser.yxx): applied Gilles' patch (April 22)
      which features:
      - improved error handling, gives file name and correct line number,
        even  if using include files
      - allows space before comment, because otherwise it would just complain
        about the "#" character and go on to parse the text after it as a
        definition
      - allows config file with an unterminated line at end of file, by
        pushing an extra newline token to the parser at EOF
      - parser correctly handles extra newline tokens, by moving this
        handling out of simple_expression, and into simple_expression_list
        and block, as simple_expression must return a new ConfigDefaults
        object and a newline token doesn't cut it (caused segfaults when
        dealing with fix above)
    * htcommon/conf_lexer.cxx: Regenerate using flex 2.5.31.
    * htcommon/conf_parser.cxx: Regenerate using bison 1.875a.

Wed Jun  9 12:32:47 2004  Gilles Detillieux  <grdetil at scrc.umanitoba.ca>

    * htdig/HTML.cc (do_tag): Fixed meta date handling fix of June 3 to
      ensure null byte gets put in by get() call.

Wed 9 Jun 2004   Lachlan Andrew  <lha at users.sourceforge.net>

    * contrib/doc2html/doc2html.pl, installdir/mime.types:
      Add support for OpenOffice.org documents (#957305)

Sat 5 Jun 2004   Lachlan Andrew  <lha at users.sourceforge.net>
